<resources>
    <string name="app_name">Anime Finder</string>
    <string name="about_info">Using this app, you can choose an anime picture and get a title name and some info about it.</string>
    <string name="about_developers_text">This app was made by Ivan Tominets, Alina Bagirova, and Igor Suvorov.</string>
    <string name="about_thanks_text">Huge thanks to <a href="https://trace.moe">WAIT</a> for the API!</string>
    <string name="choose_image_button_text">Choose Image</string>
    <string name="see_results_button_text">Results ➜</string>
    <string name="original_name">Original name:</string>
    <string name="english_name">English name:</string>
    <string name="episode">Episode:</string>
    <string name="missing_value">–</string>
    <string name="probability_label">Probability:</string>
    <string name="upload_a_photo_button_text">Upload a photo</string>
</resources>
