<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/selectableItemBackground">



<TextView
        android:id="@+id/probability_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/probability_label"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/probability"
        app:layout_constraintTop_toBottomOf="@+id/english_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/probability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/missing_value"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/probability_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/probability_label" />

    <TextView
        android:id="@+id/original_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/original_name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/original_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/missing_value"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/original_name_label"
        app:layout_constraintLeft_toRightOf="@+id/original_name_label"
        app:layout_constraintTop_toTopOf="@+id/original_name_label" />

    <TextView
        android:id="@+id/english_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/english_name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/original_name_label" />

    <TextView
        android:id="@+id/english_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/missing_value"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/english_name_label"
        app:layout_constraintLeft_toRightOf="@+id/english_name_label"
        app:layout_constraintTop_toTopOf="@+id/english_name_label" />

    <TextView
        android:id="@+id/episode_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/episode"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/probability_label"
        app:layout_constraintEnd_toStartOf="@+id/episode_number"
        app:layout_constraintRight_toRightOf="@+id/episode_number" />

    <TextView
        android:id="@+id/episode_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/missing_value"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/episode_number_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/episode_number_label" />

</androidx.constraintlayout.widget.ConstraintLayout>